@@ -6,6 +6,8 @@ Changes in 3.0.3
        alternative path for the netatalk lockfile.
 * UPD: systemd service file use PIDFile and ExecReload.
        From FR #70.
+* FIX: Couldn't create folders on FreeBSD 9.1 ZFS fileystems.
+       Fixed bug #491.
 
 Changes in 3.0.2
 ================
